src/test/LambdaOverloadingFail/LambdaOverloadingFail.expected
error: LambdaOverloadingFail.panda:9:1: call to 'doSomething' with parameters (<lambda>) is ambiguous. The following methods are all equally good matches:
    method doSomething(fn:(panda.core.Int32)=>(panda.core.Int32)) (LambdaOverloadingFail.panda:1:1)
    method doSomething(fn:(panda.core.Real64)=>(panda.core.Real64)) (LambdaOverloadingFail.panda:5:1)
1 error
