src/test/LambdaOverloadingFail/LambdaOverloadingFail.panda
method doSomething(fn:(Int)=>(Int)) {
    Console.writeLine("I am doing something to 42: \{fn(42)}")
}

method doSomething(fn:(Real)=>(Real)) {
    Console.writeLine("I am doing something real to 42: \{fn(42)}")
}

doSomething(x => x * 2)